add Auth Docs
